Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -129,11 +129,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pistachioBrian Gerrard'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ic"
+    "ice_cream_flavor + name"
    ]
   },
   {
