Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -129,22 +129,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'pistachioBrian Gerrard'"
+       "'pistachio - Brian Gerrard'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ice_cream_flavor + name"
+    "ice_cream_flavor + \" - \" +name"
    ]
   },
   {
